Tested and done!

--- a/bin/messages_de_DE.properties
+++ b/bin/messages_de_DE.properties
@@ -1,6 +1,6 @@
 PrintBalance.0=Hallo Welt
 PrintBalance.1=Bitte geben Sie Ihren Namen
-PrintBalance.2=Ich freue mich, Sie kennen zu lernen
-PrintBalance.3=Stand:
-PrintBalance.4=Du schuldest der Schule
+PrintBalance.2=Ich freue mich, Sie kennen zu lernen %s
+PrintBalance.3=Stand: %s
+PrintBalance.4=Du schuldest der Schule %s
 PrintBalance.5=Auf Wiedersehen
