--- a/src/messages_fr_FR.properties
+++ b/src/messages_fr_FR.properties
@@ -1,6 +1,6 @@
 PrintBalance.0=Bonjour tout le monde
 PrintBalance.1=S'il vous plaît entrer votre nom
-PrintBalance.2=Je suis heureux de vous rencontrer
-PrintBalance.3=En date du:
-PrintBalance.4=Vous devez l'école
+PrintBalance.2=Je suis heureux de vous rencontrer %s
+PrintBalance.3=En date du: %s
+PrintBalance.4=Vous devez l'école %s
 PrintBalance.5=Au revoir
